--- a/style/css/style.css
+++ b/style/css/style.css
@@ -18,7 +18,7 @@ header {
   height: 100vh;
   position: relative; }
 
-.div-h1 {
+.div-h1, p {
   width: 100%;
   position: absolute;
   top: 5em;
@@ -47,16 +47,8 @@ p {
   width: 100%;
   color: #ffff;
   font-size: 2.3em;
-  z-index: 3;
   top: 9em;
-  right: 0;
-  position: absolute;
-  text-align: center;
-  justify-content: center;
-  display: flex;
-  z-index: 2;
   font-family: 'Montserrat', sans-serif;
-  animation: backInDown;
   animation-duration: 1.3s; }
 
 a {
