--- a/style/css/style.css
+++ b/style/css/style.css
@@ -3,12 +3,12 @@
   margin: 0;
   border-radius: 0; }
 
-@media screen and (max-width: 420px) {
+@media screen and (max-width: 500px) {
   a {
     left: 45%;
     margin-top: 20%; } }
 
-video {
+.img-fondo {
   width: 100%;
   height: 100vh;
   object-fit: cover; }
@@ -21,15 +21,15 @@ header {
 .div-h1, p {
   width: 100%;
   position: absolute;
-  top: 5em;
+  top: 4.5em;
   right: 0;
   color: #ffff;
   text-align: center;
   justify-content: center;
   display: flex;
   z-index: 2;
-  font-size: 2.5em;
-  font-family: 'Playfair Display', serif;
+  font-size: 3em;
+  font-family: 'Cormorant Garamond', serif;
   animation: backInDown;
   animation-duration: 1s; }
 
