cambios en el inicio

--- a/style/css/style.css
+++ b/style/css/style.css
@@ -3,15 +3,8 @@
   margin: 0;
   border-radius: 0; }
 
-@media screen and (max-width: 500px) {
-  a {
-    left: 45%;
-    margin-top: 20%; } }
-
-.img-fondo {
-  width: 100%;
-  height: 100vh;
-  object-fit: cover; }
+body {
+  background-color: #fefbfb; }
 
 header {
   width: 100%;
@@ -23,45 +16,39 @@ header {
   position: absolute;
   top: 4.5em;
   right: 0;
-  color: #ffff;
+  color: #4c4b34;
   text-align: center;
   justify-content: center;
   display: flex;
   z-index: 2;
   font-size: 3em;
-  font-family: 'Cormorant Garamond', serif;
+  font-family: 'Cinzel', serif;
   animation: backInDown;
   animation-duration: 1s; }
 
-.div {
-  background-color: black;
-  width: 100%;
-  height: 100vh;
-  position: absolute;
-  top: 0;
-  left: 0;
-  z-index: 1;
-  opacity: .55; }
-
 p {
   width: 100%;
-  color: #ffff;
   font-size: 2.3em;
   top: 9em;
-  font-family: 'Montserrat', sans-serif;
-  animation-duration: 1.3s; }
+  font-family: 'Roboto', sans-serif;
+  animation-duration: 1.3s;
+  color: #bfb192; }
 
 a {
-  color: #ffff;
+  color: #bfb192;
   font-size: 2.2em;
   z-index: 4;
   top: 12em;
-  right: 43.5%;
+  right: 41.55%;
+  background-color: #4c4b34;
+  text-transform: uppercase;
+  border-radius: 5px;
+  padding: 15px;
   position: absolute;
   text-align: center;
   display: flex;
   justify-content: center;
-  font-family: 'Montserrat', sans-serif;
+  font-family: 'Cinzel', serif;
   text-decoration: none;
   animation: backInDown;
   animation-duration: 1.5s; }
@@ -70,25 +57,12 @@ a:hover {
   transform: translateY(-15px);
   transition: .5s; }
 
-a::before,
-a::after {
-  content: "";
-  position: absolute;
-  left: 0;
-  width: 100%;
-  height: 3px;
-  background-color: #ffff;
-  transform: scaleX(0);
-  transition: transform .5s; }
-
-a::before {
-  top: -3px;
-  transform-origin: left; }
-
-a::after {
-  bottom: -3px;
-  transform-origin: right; }
-
-a:hover::before,
-a:hover::after {
-  transform: scaleX(1); }
+@media screen and (max-width: 500px) {
+  a {
+    left: 45%;
+    margin-top: 20%; }
+  .div-h1, p {
+    margin-top: -1em; }
+  a {
+    width: 50%;
+    margin-left: -2.6em; } }
