--- a/style/scss/variables/_vars.scss
+++ b/style/scss/variables/_vars.scss
@@ -1,6 +1,7 @@
-$text-color: #ffff;
+$text-color: #4c4b34;
 $ancho:100%;
-$bg-color:black;
+$bg-color:#bfb192;
+$bg-color-p:#bfb192;
 $animacion:(
     animation: backInDown,
 )
