--- a/style/css/inicio.css
+++ b/style/css/inicio.css
@@ -1,39 +1,54 @@
+:root{
+    --color-detalles:#4c4b34;
+    --color-principal:#bfb192;
+    --bg-color:#fefbfb;
+    --title-family:'Cinzel', serif;
+    --text-family:'Roboto', sans-serif;
+
+}
+
 *{
     margin: 0;
     padding: 0;
     list-style:none ;
-    color: #fff;
-  
 }
+
+body{
+    background-color: var(--bg-color);
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+}
+
 
 header{
     width: 100%;
     height: 80px;
-    background-color: #000000;
     display: flex;
     justify-content: space-between;
     align-items: center;
+    
 }
+
 
 h1{
-    padding: 20px 100px;
+    padding: 20px 150px;
+    color: var(--color-detalles);
     display: flex;
     font-size: 2.5em;
-    font-family: 'Cormorant Garamond', serif;
+    font-family: var(--title-family);
     text-transform: uppercase;
 }
-
 
 
 .nav-menu ul{
     display: flex;
     align-items: center;
     text-transform: uppercase;
-    margin-right: 200px;
-    font-family: 'Source Sans Pro', sans-serif;
+    margin-right: 100px;
+    font-family:var(--text-family);
     
 }
-
 
 .nav-menu li{
     margin-right: 1.5em;
@@ -43,24 +58,88 @@ h1{
     text-decoration: none;
     font-size: 1em;
     padding-right: 30px;
-
+    color: var(--color-principal);
+    
 }
+
 
 .nav-menu a:hover{
-    color: #000;
-    background-color: #d3ad7f;
-    border: 2px solid #d3ad7f;
-    border-radius: .50em;
-    padding: .25em .75em;
+    background-color: var(--color-detalles);
+    padding: .8rem;
 }
-
-
 label, #check{
 display: none;
 }
 
-.info-p{
-    font-family: 'Montserrat', sans-serif;
+.main{
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+}
+
+
+.div-p{
+    justify-content: center;
+    text-align: center;
+    margin: auto;
+    
+}
+
+
+p{
+    font-family: 'Open Sans', sans-serif;
+    font-size: 2em;
+    color: var(--color-detalles);
+    letter-spacing: .1em;
+    width: 500px;
+    
+   
+}
+
+span{
+    font-family: var(--title-family);
+    font-size: 1.2em;
+}
+
+
+.div-img{
+    margin-right: 2em;
+    margin-top: 5em;
+}
+
+.footer {
+    width: 100%;
+    margin-top: auto;
+    background-color: var(--color-principal);
+    text-align: right;
+}
+
+.footer .share {
+    padding: 1rem 0.5;
+}
+
+.footer .share a {
+    height: 5rem;
+    width: 5rem;
+    line-height: 5rem;
+    font-size: 2rem;
+    text-align: center;
+    color: var(--color-detalles);
+    border: .1rem solid var(--bg-color);
+    margin: .3rem;
+    border-radius: 50%;
+}
+
+.footer .share a:last-child {
+    margin-right: 1.7em;
+}
+
+.footer .links {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    padding: 2rem 0;
+    gap: 1rem;
 }
 
 
@@ -70,6 +149,8 @@ display: none;
     
 .checkbtn{
     display: block;
+    color: var(--color-detalles);
+    
 }
 
 label{
@@ -77,6 +158,8 @@ label{
     position: fixed;
     top: 40px;
     right: 20px;
+    color: var(--color-detalles);
+    
 }
 
 
@@ -85,7 +168,7 @@ display: block;
 position: fixed;
 top: 70px;
 left: -100%;
-background-color: #222;
+background-color: var(--color-principal);
 width: 100%;
 height: 100vh;
 right: 0;
@@ -98,7 +181,13 @@ text-transform: uppercase;
     display: flex;
     justify-content: center;
     margin: 0;
+    color: #232b2e;
 
+}
+
+.nav-menu a{
+    color: var(--color-detalles);
+    
 }
 
 #check:checked ~ ul{
@@ -107,24 +196,6 @@ text-transform: uppercase;
     z-index: 1;
 }
 
-img{
-    width: 100%;
-    object-fit: cover;
-}
-
-.info {
-    position: absolute;
-
-}
-
-.info-p{
-    font-size: 1.2em;
-    text-align: center;
-    justify-content: center;
-    width: 200px;
-    margin-top: -20%;
-    font-family: 'Montserrat', sans-serif;
-}
 
 }
 
@@ -135,16 +206,26 @@ h1{
     font-size: 2.5em;
 }
 
-    .info-p{
-        font-size: 1.4em;
-        margin-top: -25%;
-        margin-left: 10%;
-        width: 250px;
-        font-family: 'Montserrat', sans-serif;
-    }
-
+.div-p{
+    margin-top: 8em;
 }
 
+p{
+    font-size: 1.8em;
+}
+
+span{
+    font-size: 1em;
+}
+img {
+    display: none;
+}
+
+
+
+
+
+}
 
 @media screen and (max-width: 420px){
 
@@ -156,88 +237,23 @@ h1 {
 
     }
 
-    .info-p {
-            font-size: 1.4em;
-            margin-top: -25%;
-            margin-left: 10%;
-            width: 250px;
-            font-family: 'Montserrat', sans-serif;
-        }
+
+.div-p {
+    margin-top: 8em;
 }
 
+p {
+    font-size: 1.8em;
+}
+
+span {
+    font-size: 1em;
+}
 
 img {
-    width: 100%;
-    height: 100vh;
-    object-fit: cover;
+    display: none;
 }
 
-
-.info{
-    position: absolute;
-    width: calc(100% - 15%);
-    height: 150px;
-    top: 45%;
-    left: 15%;
     
 }
-
-p{
-   font-size: 2em;
-    width: 500px;
-    justify-content: center;
-    text-align: center;
-    line-height: 2em;
-}
-
-
-
-.footer{
-    background:#000000;
-    text-align: center;
-}
-
-.footer .share{
-    padding:1rem 0;
-}
-
-.footer .share a{
-    height: 5rem;
-    width: 5rem;
-    line-height: 5rem;
-    font-size: 2rem;
-    color:#fff;
-    border:.1rem solid rgba(255, 255, 255, .3);
-    margin:.3rem;
-    border-radius: 50%;
-}
-
-.footer .share a:hover{
-    background-color:#d3ad7f;
-}
-
-.footer .links{
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-    padding:2rem 0;
-    gap:1rem;
-}
-
-.footer .links a{
-    padding:.7rem 2rem;
-    color:#fff;
-    border: .1rem solid rgba(255, 255, 255, .3);
-    font-size: 2rem;
-}
-
-.footer .links a:hover{
-    background:#d3ad7f;
-}
-
-
-
-
-
-
 
