arreglos en el footer

--- a/style/css/inicio.css
+++ b/style/css/inicio.css
@@ -1,19 +1,19 @@
-:root{
-    --color-detalles:#4c4b34;
-    --color-principal:#bfb192;
-    --bg-color:#fefbfb;
-    --title-family:'Cinzel', serif;
-    --text-family:'Roboto', sans-serif;
+:root {
+    --color-detalles: #4c4b34;
+    --color-principal: #bfb192;
+    --bg-color: #fefbfb;
+    --title-family: 'Cinzel', serif;
+    --text-family: 'Roboto', sans-serif;
 
 }
 
-*{
+* {
     margin: 0;
     padding: 0;
-    list-style:none ;
+    list-style: none;
 }
 
-body{
+body {
     background-color: var(--bg-color);
     display: flex;
     flex-direction: column;
@@ -21,17 +21,17 @@ body{
 }
 
 
-header{
+header {
     width: 100%;
     height: 80px;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    
+
 }
 
 
-h1{
+h1 {
     padding: 20px 150px;
     color: var(--color-detalles);
     display: flex;
@@ -41,236 +41,247 @@ h1{
 }
 
 
-.nav-menu ul{
+.nav-menu ul {
     display: flex;
     align-items: center;
     text-transform: uppercase;
     margin-right: 100px;
-    font-family:var(--text-family);
-    
+    font-family: var(--text-family);
+
 }
 
-.nav-menu li{
+.nav-menu li {
     margin-right: 1.5em;
 }
 
-.nav-menu a{
+.nav-menu a {
     text-decoration: none;
     font-size: 1em;
     padding-right: 30px;
     color: var(--color-principal);
-    
+
 }
 
 
-.nav-menu a:hover{
+.nav-menu a:hover {
     background-color: var(--color-detalles);
     padding: .8rem;
 }
-label, #check{
-display: none;
+
+label,
+#check {
+    display: none;
 }
 
-.main{
+.main {
     width: 100%;
     display: flex;
     justify-content: space-between;
 }
 
 
-.div-p{
+.div-p {
     justify-content: center;
     text-align: center;
     margin: auto;
-    
+
 }
 
 
-p{
+p {
     font-family: 'Open Sans', sans-serif;
     font-size: 2em;
     color: var(--color-detalles);
     letter-spacing: .1em;
     width: 500px;
-    
-   
+
+
 }
 
-span{
+span {
     font-family: var(--title-family);
     font-size: 1.2em;
 }
 
 
-.div-img{
+.div-img {
     margin-right: 2em;
-    margin-top: 4em;
+    margin-top: 4.2em;
 }
 
 .footer {
     width: 100%;
+    height: 90px;
     margin-top: auto;
     background-color: var(--color-principal);
     text-align: right;
 }
 
-.footer .share {
+section ul {
     width: 100%;
-    padding: 1rem 0.5;
 }
 
-.footer .share a {
-    height: 5rem;
-    width: 5rem;
-    line-height: 5rem;
-    font-size: 2rem;
-    text-align: center;
+section ul li {
+    display: inline-block;
+    padding: 24px 25px;
+
+}
+
+i {
+    font-size: 2.5em;
     color: var(--color-detalles);
-    margin: .3rem;
-    
 }
 
-.footer .share a:last-child {
-    margin-right: 1.7em;
-}
-
-.footer .links {
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-    padding: 2rem 0;
-    gap: 1rem;
+i:visited {
+    color: var(--color-detalles);
 }
 
 
-@media screen and (max-width: 800px){
-    
-.div-p {
+@media screen and (max-width: 800px) {
+
+    .div-p {
         margin-top: 10em;
         width: 100%;
     }
 
+    p {
+        margin-left: 2em;
+    }
 
-img {
+    img {
         display: none;
     }
-    
-.checkbtn{
-    display: block;
-    color: var(--color-detalles);
-    
-}
 
-label{
-    display: block;
-    position: fixed;
-    top: 40px;
-    right: 20px;
-    color: var(--color-detalles);
-    
-}
+    .checkbtn {
+        display: block;
+        color: var(--color-detalles);
 
+    }
 
-.nav-menu ul{
-display: block;
-position: fixed;
-top: 70px;
-left: -100%;
-background-color: var(--color-principal);
-width: 100%;
-height: 100vh;
-right: 0;
-padding-top: 30px;
-text-transform: uppercase;
-}
-
-.nav-menu ul li{
-    padding: 2em;
-    display: flex;
-    justify-content: center;
-    margin: 0;
-    color: #232b2e;
-
-}
-
-.nav-menu a{
-    color: var(--color-detalles);
-    
-}
-
-#check:checked ~ ul{
-    left: 0;
-    cursor: pointer;
-    z-index: 1;
-}
-
-
-.footer {
-
-    text-align: center;
-}
-
-}
-
-
-@media screen and (max-width: 500px){
-
-h1{
-    font-size: 2.5em;
-}
-
-.div-p{
-    margin-top: 8em;
-    width: 100%;
-}
-
-p{
-    font-size: 1.8em;
-}
-
-span{
-    font-size: 1.4em;
-}
-img {
-    display: none;
-}
-
-
-.footer {
-
-    text-align: center;
-}
-
-
-}
-
-@media screen and (max-width: 420px){
-
-
-h1 {
-        font-size: 2.4em;
-       padding: 20px;
-       padding-left: 2em;
+    label {
+        display: block;
+        position: fixed;
+        top: 40px;
+        right: 20px;
+        color: var(--color-detalles);
 
     }
 
 
-.div-p {
-    margin-top: 8em;
+    .nav-menu ul {
+        display: block;
+        position: fixed;
+        top: 70px;
+        left: -100%;
+        background-color: var(--color-principal);
+        width: 100%;
+        height: 100vh;
+        right: 0;
+        padding-top: 30px;
+        text-transform: uppercase;
+    }
+
+    .nav-menu ul li {
+        padding: 2em;
+        display: flex;
+        justify-content: center;
+        margin: 0;
+        color: #232b2e;
+
+    }
+
+    .nav-menu a {
+        color: var(--color-detalles);
+
+    }
+
+    #check:checked~ul {
+        left: 0;
+        cursor: pointer;
+        z-index: 1;
+    }
+
+
+    .footer {
+
+        text-align: center;
+    }
+
+    section ul {
+        width: 100%;
+    }
+
 }
 
-p {
-    font-size: 1.8em;
+
+@media screen and (max-width: 500px) {
+
+    h1 {
+        font-size: 2.5em;
+    }
+
+    .div-p {
+        margin-top: 8em;
+        width: 100%;
+    }
+
+    p {
+        margin-left: .6em;
+        font-size: 1.8em;
+    }
+
+    span {
+        font-size: 1.4em;
+    }
+
+    img {
+        display: none;
+    }
+
+
+    .footer {
+        width: 100%;
+        text-align: center;
+    }
+
+    section ul {
+        width: 100%;
+    }
+
 }
 
-span {
-    font-size: 1em;
-}
+@media screen and (max-width: 420px) {
 
-img {
-    display: none;
-}
 
-    
-}
+    h1 {
+        font-size: 2.4em;
+        padding: 20px;
+        padding-left: 2em;
 
+    }
+
+
+    .div-p {
+        margin-top: 8em;
+    }
+
+    p {
+        font-size: 1.8em;
+    }
+
+    span {
+        font-size: 1em;
+    }
+
+    img {
+        display: none;
+    }
+
+    .footer {
+        text-align: center;
+    }
+
+    section ul {
+        width: 100%;
+    }
+}
