--- a/style/css/tipos-de-cafe.css
+++ b/style/css/tipos-de-cafe.css
@@ -1,53 +1,162 @@
+:root {
+    --color-detalles: #4c4b34;
+    --color-principal: #bfb192;
+    --bg-color: #fefbfb;
+    --title-family: 'Cinzel', serif;
+    --text-family: 'Roboto', sans-serif;
+
+}
+
 * {
     padding: 0;
     margin: 0;
-    border-radius: 0;
-    font-family: 'Montserrat', sans-serif;
-    color: #ffff;
-}
-
-
-.img-fondo {
-    width: 100%;
-    height: 100vh;
-    object-fit: cover;
-}
-
-.header-div {
-    background-color: #000000;
-    width: 100%;
-    height: 100vh;
-    position: absolute;
-    top: 0;
-    left: 0;
-    z-index: 1;
-    opacity: .55;
-
-}
-
-.info {
-    position: absolute;
-    top: 0;
-    width: 100%;
-    text-align: center;
-    z-index: 1;
-    animation: backInUp;
-    animation-duration: 1.3s;
-}
-
-.info-h1 {
-    font-size: 3em;
-    font-family: 'Playfair Display', serif;
-    margin-top: 3em;
-}
-
-
-.info-li {
-    padding: .5em;
     list-style: none;
+
+
 }
 
 
-p {
-    font-size: 1.5em;
+
+body {
+    background-color: var(--bg-color);
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
 }
+
+
+
+header {
+    width: 100%;
+    height: 80px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+}
+
+
+h1 {
+    padding: 20px 150px;
+    color: var(--color-detalles);
+    display: flex;
+    font-size: 2.5em;
+    font-family: var(--title-family);
+    text-transform: uppercase;
+}
+
+.nav-menu ul {
+    display: flex;
+    align-items: center;
+    text-transform: uppercase;
+    margin-right: 100px;
+    font-family: var(--text-family);
+
+}
+
+
+.nav-menu li {
+    margin-right: 1.5em;
+}
+
+.nav-menu a {
+    text-decoration: none;
+    font-size: 1em;
+    padding-right: 30px;
+    color: var(--color-principal);
+
+}
+
+.nav-menu a:hover {
+    background-color: var(--color-detalles);
+    padding: .8rem;
+}
+
+label,
+#check {
+    display: none;
+}
+@media screen and (max-width: 800px) {
+
+
+    .checkbtn {
+        display: block;
+        color: var(--color-detalles);
+
+    }
+
+    label {
+        display: block;
+        position: fixed;
+        top: 40px;
+        right: 20px;
+        color: var(--color-detalles);
+
+    }
+
+
+    .nav-menu ul {
+        display: block;
+        position: fixed;
+        top: 70px;
+        left: -100%;
+        background-color: var(--color-principal);
+        width: 100%;
+        height: 100vh;
+        right: 0;
+        padding-top: 30px;
+        text-transform: uppercase;
+    }
+
+    .nav-menu ul li {
+        padding: 2em;
+        display: flex;
+        justify-content: center;
+        margin: 0;
+        color: #232b2e;
+
+    }
+
+    .nav-menu a {
+        color: var(--color-detalles);
+
+    }
+
+    #check:checked~ul {
+        left: 0;
+        cursor: pointer;
+        z-index: 1;
+    }
+
+
+}
+
+@media screen and (max-width: 500px) {
+
+    h1 {
+        font-size: 2.5em;
+  
+}
+
+@media screen and (max-width: 420px) {
+
+
+    h1 {
+        font-size: 2.4em;
+        padding: 20px;
+        padding-left: 2em;
+
+    }
+
+}
+
+
+
+/*<li class="info-li"><p>Cafe con Leche...............$280</p></li>
+<li class="info-li"><p>Americano.......................$310</p></li>
+<li class="info-li"><p>Cappuccino......................$340</p></li>
+<li class="info-li"><p>Expresso Lungo...............$260</p></li>
+<li class="info-li"><p>Macchiato.........................$390</p></li>
+<li class="info-li"><p>Flat...................................$350</p></li>
+<li class="info-li"><p>Submarino........................$330</p></li>
+<li class="info-li"><p>Lagrima............................$290</p></li>*/
