--- a/style/css/inicio.css
+++ b/style/css/inicio.css
@@ -84,6 +84,7 @@ label,
     justify-content: center;
     text-align: center;
     margin: auto;
+    width: auto;
 
 }
 
@@ -93,7 +94,7 @@ p {
     font-size: 2em;
     color: var(--color-detalles);
     letter-spacing: .1em;
-    width: 500px;
+    width: 10em;
 
 
 }
@@ -115,10 +116,14 @@ span {
     margin-top: auto;
     background-color: var(--color-principal);
     text-align: right;
+    display: flex;
+    flex-wrap: wrap;
 }
 
 section ul {
     width: 100%;
+    
+   
 }
 
 section ul li {
@@ -203,7 +208,8 @@ i:visited {
 
 
     .footer {
-
+       width: 100%;
+    
         text-align: center;
     }
 
@@ -218,6 +224,7 @@ i:visited {
 
     h1 {
         font-size: 2.5em;
+        padding: 20px 70px;
     }
 
     .div-p {
@@ -256,13 +263,14 @@ i:visited {
     h1 {
         font-size: 2.4em;
         padding: 20px;
-        padding-left: 2em;
+        padding-left: 2rem;
 
     }
 
 
     .div-p {
-        margin-top: 8em;
+       width: 90%;
+       max-width: 400px;
     }
 
     p {
@@ -278,6 +286,7 @@ i:visited {
     }
 
     .footer {
+        width: 100%;
         text-align: center;
     }
 
