--- a/style/css/inicio.css
+++ b/style/css/inicio.css
@@ -41,38 +41,6 @@ h1 {
 }
 
 
-.nav-menu ul {
-    display: flex;
-    align-items: center;
-    text-transform: uppercase;
-    margin-right: 100px;
-    font-family: var(--text-family);
-
-}
-
-.nav-menu li {
-    margin-right: 1.5em;
-}
-
-.nav-menu a {
-    text-decoration: none;
-    font-size: 1em;
-    padding-right: 30px;
-    color: var(--color-principal);
-
-}
-
-
-.nav-menu a:hover {
-    background-color: var(--color-detalles);
-    padding: .8rem;
-}
-
-label,
-#check {
-    display: none;
-}
-
 .main {
     width: 100%;
     display: flex;
@@ -122,10 +90,10 @@ span {
 
 section ul {
     width: 100%;
-    
-   
-}
+    max-width: 895px;
+    text-align: right;
 
+}
 section ul li {
     display: inline-block;
     padding: 24px 25px;
@@ -156,56 +124,6 @@ i:visited {
     img {
         display: none;
     }
-
-    .checkbtn {
-        display: block;
-        color: var(--color-detalles);
-
-    }
-
-    label {
-        display: block;
-        position: fixed;
-        top: 40px;
-        right: 20px;
-        color: var(--color-detalles);
-
-    }
-
-
-    .nav-menu ul {
-        display: block;
-        position: fixed;
-        top: 70px;
-        left: -100%;
-        background-color: var(--color-principal);
-        width: 100%;
-        height: 100vh;
-        right: 0;
-        padding-top: 30px;
-        text-transform: uppercase;
-    }
-
-    .nav-menu ul li {
-        padding: 2em;
-        display: flex;
-        justify-content: center;
-        margin: 0;
-        color: #232b2e;
-
-    }
-
-    .nav-menu a {
-        color: var(--color-detalles);
-
-    }
-
-    #check:checked~ul {
-        left: 0;
-        cursor: pointer;
-        z-index: 1;
-    }
-
 
     .footer {
        width: 100%;
