--- a/style/css/sobre-nosotros.css
+++ b/style/css/sobre-nosotros.css
@@ -15,8 +15,6 @@
 
 }
 
-
-
 body {
     background-color: var(--bg-color);
     display: flex;
@@ -45,37 +43,6 @@ h1 {
     text-transform: uppercase;
 }
 
-.nav-menu ul {
-    display: flex;
-    align-items: center;
-    text-transform: uppercase;
-    margin-right: 100px;
-    font-family: var(--text-family);
-
-}
-
-
-.nav-menu li {
-    margin-right: 1.5em;
-}
-
-.nav-menu a {
-    text-decoration: none;
-    font-size: 1em;
-    padding-right: 30px;
-    color: var(--color-principal);
-
-}
-
-.nav-menu a:hover {
-    background-color: var(--color-detalles);
-    padding: .8rem;
-}
-
-label,
-#check {
-    display: none;
-}
 
 .main {
     width: 100%;
@@ -90,7 +57,8 @@ label,
 
 .div-img{
     margin-left: 5em;
-    height: calc(100vh - 300px);
+    height: 100%;
+    max-height: 600px;
     object-fit: contain;
     width: 600px;
 }
@@ -107,7 +75,8 @@ img{
     text-align: center;
     margin: auto;
     background-color: var(--color-principal);
-    height: calc(100vh - 340px);
+    height: 100%;
+    max-height: 600px;
     padding: 20px;
     margin-left:0;
     
@@ -140,8 +109,10 @@ span {
 
 section ul {
     width: 100%;
-}
+    max-width: 895px;
+    text-align: right;
 
+}
 section ul li {
     display: inline-block;
     padding: 24px 25px;
@@ -161,55 +132,6 @@ i:visited {
 
 @media screen and (max-width: 800px) {
 
-
-    .checkbtn {
-        display: block;
-        color: var(--color-detalles);
-
-    }
-
-    label {
-        display: block;
-        position: fixed;
-        top: 40px;
-        right: 20px;
-        color: var(--color-detalles);
-
-    }
-
-
-    .nav-menu ul {
-        display: block;
-        position: fixed;
-        top: 70px;
-        left: -100%;
-        background-color: var(--color-principal);
-        width: 100%;
-        height: 100vh;
-        right: 0;
-        padding-top: 30px;
-        text-transform: uppercase;
-    }
-
-    .nav-menu ul li {
-        padding: 2em;
-        display: flex;
-        justify-content: center;
-        margin: 0;
-        color: #232b2e;
-
-    }
-
-    .nav-menu a {
-        color: var(--color-detalles);
-
-    }
-
-    #check:checked~ul {
-        left: 0;
-        cursor: pointer;
-        z-index: 1;
-    }
 
     .div-img{
     display: none;
@@ -239,9 +161,10 @@ i:visited {
 
 }
 
-@media screen and (max-width: 520px) {
+@media screen and (max-width: 600px) {
     h1 {
             font-size: 2.5em;
+            padding-left: 1em;
     
         }
 
@@ -252,15 +175,19 @@ i:visited {
     }
         
     .div-p {
-        margin-top: -2rem;
-        height: auto;
+        margin-top: 1rem;
+        
         border-radius: 5px;
+       
+        height: 100%;
+        max-height: 600px;
         width: 100%;
+        max-width: 700px;
     }
         
     p {
         margin: .5rem 1rem;
-        font-size: 1.4rem;
+        font-size: 1.2rem;
         width: auto;
         
     }
